--- a/desafios/d012 2/style/style.css
+++ b/desafios/d012 2/style/style.css
@@ -1,19 +1,80 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+:root{
+    --font-normal: Verdana, Geneva, Tahoma, sans-serif;
+    --font-text: 'Sriracha', cursive;
+    --font-title: 'Passion One', cursive;
+}
 
 *{
     margin: 0px;
     padding: 0px;
 }
 
+body{
+    font-family: var(--font-text);
+}
 
 header{
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--font-normal);
 }
 
+header > h1 {
+    font-family: var(--font-title);
+    font-weight: normal;
+    font-size: 6em;
+    padding-top: 0.5em;
+}
+
+header > p {
+    padding-bottom: 3.5em;
+}
+
+section{
+    padding-left: 2em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+
+section > p {
+    font-size: 1.5em;
+    line-height: 2em;
+    width: 12em;
+}
+
+section.image{
+    background-color: black;
+    color:white;
+    background-attachment: fixed;
+    background-size: cover;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+}
+
+section.normal > p {
+    padding-bottom: 1.5em;
+}
+
+section.image > p {
+    background-color: rgba(0, 0, 0, 0.507);
+    padding-left: 0.5em;
+}
+
+section#image1{
+    background-image: url(../images/background001.jpg);
+    background-position: right;
+}
+
+section#image2{
+    background-image: url(../images/background002.jpg);
+
+}
 
 a {
     text-decoration: none;
@@ -30,4 +91,5 @@ footer {
     background-color: black;
     text-align: center;
     color: white;
+    font-family: var(--font-normal);
 }
